force-app/main/default/objects/Graduation_Award__c.object
<CustomObject>
    <fields>
        <fullName>Award_Code_1__c</fullName>
        <label>Award Code 1</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award_Code_2__c</fullName>
        <label>Award Code 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award_Course_Code__c</fullName>
        <label>Award Course Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award_Course_Title__c</fullName>
        <label>Award Course Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award_Course_Version__c</fullName>
        <label>Award Course Version</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Award_Title_1__c</fullName>
        <label>Award Title 1</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award_Title_2__c</fullName>
        <label>Award Title 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award_Type__c</fullName>
        <label>Award Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alternative Exit</fullName>
                </value>
                <value>
                    <fullName>Combined</fullName>
                </value>
                <value>
                    <fullName>Single</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bypass_Writeback_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, a platform event won&apos;t be fired when a watched field changes. Automatically cleared on writeback</description>
        <label>Bypass Writeback Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Callista_Transaction_Number__c</fullName>
        <description>Id returned by Callista once the application has been created</description>
        <label>Callista Transaction Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Callista_Writeback_Requested_Time__c</fullName>
        <description>Time of change that has triggered a writeback</description>
        <label>Callista Writeback Requested Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <description>Date the award was cancelled</description>
        <label>Cancellation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cancellation_Succeeded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the cancellation request successfully posted to Callista</description>
        <label>Cancellation Succeeded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <description>Course code for the Award</description>
        <label>Course Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Title__c</fullName>
        <description>Course title for the Award</description>
        <label>Course Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Version_Number__c</fullName>
        <description>Course version number for the Award</description>
        <label>Course Version Number</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Document_Callista_Id__c</fullName>
        <description>Id returned by Callista once the name change document has been created</description>
        <label>Document Callista Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduation_Application__c</fullName>
        <description>Parent Graduation Application</description>
        <label>Graduation Application</label>
        <referenceTo>Graduation_Application__c</referenceTo>
        <relationshipLabel>Graduation Awards</relationshipLabel>
        <relationshipName>Graduation_Awards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Graduation_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Payment for this Award</description>
        <label>Graduation Payment</label>
        <referenceTo>Graduation_Payment__c</referenceTo>
        <relationshipLabel>Graduation Awards</relationshipLabel>
        <relationshipName>Graduation_Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_Attendance_Fee_Waiver__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, this Award does not require payment</description>
        <label>Has Attendance Fee Waiver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_HDR_Conferral_Application__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, this Award is for a HDR Conferral Application</description>
        <label>Has HDR Conferral Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Pending_Callista_Writeback__c</fullName>
        <description>This Award has been queued for a writeback</description>
        <formula>Callista_Writeback_Requested_Time__c &lt; Last_Callista_Writeback_Success_Time__c
||
ISBLANK(Last_Callista_Writeback_Success_Time__c) &amp;&amp; NOT(ISBLANK(Callista_Writeback_Requested_Time__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Pending Callista Writeback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Id__c</fullName>
        <description>External Id used by GCP</description>
        <externalId>true</externalId>
        <label>Integration Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Attending_Ceremony__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Student is attending this ceremony</description>
        <label>Is Attending Ceremony</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Callista_Writeback_Error__c</fullName>
        <description>Most recent error encountered for a writeback</description>
        <label>Last Callista Writeback Error</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Callista_Writeback_Payload__c</fullName>
        <description>Most recent JSON payload sent to Callista</description>
        <label>Last Callista Writeback Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Callista_Writeback_Status_Time__c</fullName>
        <description>Time of last attempted writeback (regardless of outcome)</description>
        <label>Last Callista Writeback Status Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Callista_Writeback_Status__c</fullName>
        <description>Status of last Callista writeback</description>
        <label>Last Callista Writeback Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Callista_Writeback_Success_Time__c</fullName>
        <description>Time of last successful Callista writeback</description>
        <label>Last Callista Writeback Success Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Receipt_Number_External_System__c</fullName>
        <description>Receipt number from payment in an external system</description>
        <label>Receipt Number (External System)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Comments__c</fullName>
        <description>Comments from staff</description>
        <label>Staff Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Student_Person_Id__c</fullName>
        <description>Person Id from the student&apos;s contact record</description>
        <formula>Graduation_Application__r.Student__r.Person_ID_unique__c</formula>
        <label>Student Person Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Writeback_Apex_Job_Id__c</fullName>
        <description>Id of Async context that is currently processing this Award for writeback</description>
        <label>Writeback Apex Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Writeback_Requested_Age_Minutes__c</fullName>
        <description>Minutes since the last writeback was requested. Blank if no writeback is pending</description>
        <formula>IF(
  ISBLANK(Last_Callista_Writeback_Success_Time__c) || Callista_Writeback_Requested_Time__c &gt; Last_Callista_Writeback_Success_Time__c,
  (NOW() - Callista_Writeback_Requested_Time__c) * 1440,
  NULL
)</formula>
        <label>Writeback Requested Age (Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Writeback_Retry_Attempt__c</fullName>
        <description>Number of writeback attempts made by GradsCallistaSyncBatch (set to 0 on success)</description>
        <label>Writeback Retry Attempt</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Graduation Award</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Integration_Id__c</columns>
        <columns>Graduation_Application__c</columns>
        <columns>Graduation_Payment__c</columns>
        <columns>Is_Attending_Ceremony__c</columns>
        <columns>Has_Attendance_Fee_Waiver__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Non_Attending_Externally_Paid</fullName>
        <booleanFilter>(1 OR 3) AND 2</booleanFilter>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Attending_Ceremony__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Receipt_Number_External_System__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Cancellation_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Non-Attending Externally Paid</label>
    </listViews>
    <nameField>
        <displayFormat>GAWARD-{0000000}</displayFormat>
        <label>Graduation Award Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Graduation Awards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cant_Remove_Applied_Waiver</fullName>
        <active>true</active>
        <description>Can&apos;t remove an Applied Application&apos;s Waiver or External Receipt Number</description>
        <errorConditionFormula>ISPICKVAL(Graduation_Application__r.Status__c, &quot;Applied&quot;)
&amp;&amp;
(
  (!Has_Attendance_Fee_Waiver__c &amp;&amp; PRIORVALUE(Has_Attendance_Fee_Waiver__c)) 
  ||
  (ISBLANK(Receipt_Number_External_System__c) &amp;&amp; NOT(ISBLANK(PRIORVALUE(Receipt_Number_External_System__c))))
)</errorConditionFormula>
        <errorMessage>Can&apos;t remove Waiver or External Receipt Number from Applied Application</errorMessage>
    </validationRules>
</CustomObject>